[package]
name = "rust-finance"
version = "0.0.0"
authors = ["dan <danieleades@hotmail.com>"]
edition = "2018"

[dependencies]
decimal = "2.0.4"
chrono = { version = "0.4.6", features = ["serde"] }
serde_derive = "1.0.80"
serde = "1.0.80"
uuid = { version = "0.7.1", features = ["serde", "v4"] }
log = "0.4.6"
